# MEAutility

./: .travis.yml  ENIAC.ipynb  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml  python-publish.yml
MEAutility/: __init__.py  core.py  plotting.py
MEAutility/electrodes/: NeuroPixels-128-v1.json  NeuroSeeker-128.json  Neuronexus-32-Kampff.json  Neuronexus-32-Kampff.yaml  Neuronexus-32-cut-30.json  Neuronexus-32-cut-30.yaml  Neuronexus-32.json  Neuronexus-32.yaml  Neuropixel-24.json  Neuropixel-384.json  Neuropixels-128.yaml  Neuropixels-24.yaml  Neuropixels-384.yaml  Neuropixels-64.yaml  Neuropixels2-24.yaml  Neuropixels2-384.yaml  Neuroseeker-128-Kampff.yaml  Neuroseeker-128.yaml  SqMEA-10-15.yaml  SqMEA-10-15um.json  SqMEA-10-15um.yaml  SqMEA-10-25um.json  SqMEA-10-25um.yaml  SqMEA-15-10.yaml  SqMEA-15-10um.json  SqMEA-15-10um.yaml  SqMEA-5-30.yaml  SqMEA-5-30um.json  SqMEA-5-30um.yaml  SqMEA-6-25.yaml  SqMEA-6-25um.json  SqMEA-6-25um.yaml  SqMEA-7-20.yaml  SqMEA-7-20um.json  SqMEA-7-20um.yaml  monotrode.yaml  tetrode-mea-d.yaml  tetrode-mea-l.yaml  tetrode-mea-s.yaml  tetrode.json  (+2 more)
MEAutility/tests/: test_core.py  test_plotting.py
docs/source/: api.rst  conf.py  index.rst  mea_definitions.rst  mea_handling.rst  mea_plotting.rst  mea_stimulation.rst
notebooks/: ENIAC.ipynb  mea_definitions.ipynb  mea_handling.ipynb  mea_plotting.ipynb  mea_stimulation.ipynb
src/MEAutility/: __init__.py  core.py
src/MEAutility/electrodes/: Neuronexus-32.yaml  Neuropixels-128.yaml  Neuropixels-64.yaml  Neuropixels2-128.yaml  Neuropixels2-64.yaml  Neuroseeker-128.yaml  SqMEA-15-10.yaml  SqMEA-6-25.yaml  SqMEA-7-20.yaml  tetrode-mea-d.yaml  tetrode.yaml
tests/: test_core.py  test_plotting.py
